cv web page updated

--- a/cv web page/index.html
+++ b/cv web page/index.html
@@ -17,7 +17,7 @@
 
     <div class="main-div container">
         <div class="row outer-div">
-            <div class="left-div col-md-4 col-sm-4">
+            <div class="left-div col-md-3">
                 <img class="image" src="mazhar.jpg" alt="">
                 <div class="left-internal-1A-div">
                     <P class="left-internal-1a-div">MAZHAR AHEER</P>
@@ -31,7 +31,17 @@
                 <div class="left-internal-4B-div"></div>
 
             </div>
-            <div class="right-div col-7 "></div>
+          
+            <div class="right-div col-md-5 ">
+               <div class="right-internal-1A-div">WORK EXPERIENCE</div>
+               <div class="right-internal-1B-div"></div>
+               <div class="right-internal-2A-div">EDUCATION</div>
+               <div class="right-internal-2B-div"></div>
+               <div class="right-internal-3A-div">LANGUAGES</div>
+               <div class="right-internal-3B-div"></div>
+               <div class="right-internal-4A-div">-------------------</div>
+               <div class="right-internal-4B-div"></div>
+            </div>
         </div>
     </div>
 
