input field added

--- a/javascript/helloworld/index.html
+++ b/javascript/helloworld/index.html
@@ -9,12 +9,19 @@
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="app.js"></script>
 </head>
-
 <body>
+
     <h1>JavaScrirpt HelloWorld</h1>
+
+<div>
+    First Number: <input type="text" id="firstNumber">
+</div>
+
 <div>
     <button  onclick="showDetails()" >Show Details</button>
 </div>
-</body>
 
+<h2 id="cityId"></h2>
+
+</body>
 </html>
